tests/codegen/fail/interface/trait/argument_wrong_default_array.stderr
error[E0277]: the trait bound `[bool; 2]: From<[bool; 3]>` is not satisfied
 --> fail/interface/trait/argument_wrong_default_array.rs:5:41
  |
3 | #[graphql_interface]
  | -------------------- required by a bound introduced by this call
4 | trait Character {
5 |     fn wrong(&self, #[graphql(default = [true, false, false])] input: [bool; 2]) -> bool;
  |                                         ^^^^^^^^^^^^^^^^^^^^ the trait `From<[bool; 3]>` is not implemented for `[bool; 2]`
  |
  = help: the following other types implement trait `From<T>`:
            <&'a [ascii::ascii_char::AsciiChar] as From<&'a ascii::ascii_str::AsciiStr>>
            <&'a [u32; 4] as From<&'a ppv_lite86::x86_64::vec128_storage>>
            <&'a [u8] as From<&'a ascii::ascii_str::AsciiStr>>
            <&'a mut [ascii::ascii_char::AsciiChar] as From<&'a mut ascii::ascii_str::AsciiStr>>
            <[T; LANES] as From<Simd<T, LANES>>>
            <[bool; LANES] as From<Mask<T, LANES>>>
            <[u128; 1] as From<ppv_lite86::x86_64::vec128_storage>>
            <[u128; 2] as From<ppv_lite86::x86_64::vec256_storage>>
          and 7 others
  = note: required for `[bool; 3]` to implement `Into<[bool; 2]>`
